# S0009E-lab1

projects/mathlibtest/: CMakeLists.txt
projects/mathlibtest/code/: mat4.h  vec3.h  vec4.h
